<resources>
    <string name="InstallAndUpdateButtonText">Install &amp; Update</string>
    <string name="MaintainChrootInTerminal">Add Metapackages</string>
    <string name="TwoMACDigits">XX</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_author">"ABOUT:

 Found a bug? A suggestion? Follow me on my networks and let me know!

 https://linktr.ee/v0lk3n

 CREDITS:

 Made with ♥ by V0lk3n

 - Fenugrec! For freediag tool.
https://github.com/fenugrec

 - Kobolt! For can-usb.
https://github.com/kobolt

 - Alexmohr! For can-usb fork.
https://github.com/alexmohr

 - Linux-Can! For can-utils and socketcand.
https://github.com/linux-can

 - Mguentner! For cannelloni.
https://github.com/mguentner

 - CaringCaribou!
https://github.com/CaringCaribou

 - zombieCraig! For ICSim tool.
https://github.com/zombieCraig

 - idlesign! For VIN Info tool.
https://github.com/idlesign

"</string>
    <string name="aboutchroot">"This is Chroot Manager for Kali. The \"chroot\" is a full installation of Kali Linux that shares processing, networking, storage, and other resources with Android. It resides in your internal app storage area and is required to have at least 8 Gb free space for the minimal or full installation, just to make sure it won't break your system."</string>
    <string name="add">Add</string>
    <string name="add_command">Add Command</string>
    <string name="add_lauchner_btn_command">Command:</string>
    <string name="add_lauchner_btn_label">Label:</string>
    <string name="admin">UAC Bypass</string>
    <string name="advancedOptionsSwitchText">Advanced Options</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">NetHunter</string>
    <string name="app_nav_home_label">NetHunter</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="attack_launched">Attack launched!</string>
    <string name="audio_description">This module allow Chroot audio playback to Android environment over local server, ensuring seamless playback of HQ-Audio output through the main speakers.</string>
    <string name="audio_portinput">8000</string>
    <string name="audio_serverinput">127.0.0.1</string>
    <string name="audio_service_not_bound">Service not bound. Please try again.</string>
    <string name="audio_service_not_connected">Service not connected yet. Please wait.</string>
    <string name="auto_start">Auto Start</string>
    <string name="autorunningscripts">NetHunter: auto-running startup scripts</string>
    <string name="badusb_description">"This is our implementation of the BadUSB attack as demonstrated at Black Hat USA 2014. Enabling this USB gadget mode will allow your device to act as a USB network interface when plugged into a target computer. Connecting the USB cable to a PC will force all traffic from that PC (Windows or Linux) through the NetHunter device, where the traffic can be MITM'ed."</string>
    <string name="badusb_label">BadUSB MITM Attack</string>
    <string name="bdfproxy_cfg">The configuration file for BDFProxy.</string>
    <string name="boot_notification_channel">Boot</string>
    <string name="boot_notification_channel_description">Notification for run at boot services</string>
    <string name="bootanimation_path_not_found">Bootanimation path not found</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bssid">BSSID</string>
    <string name="bt_badbt">Inspired by the Mr.Robot police car scene and the Flipper XFW Team, you can now create a Bluetooth keyboard server and send keystrokes straight from NetHunter. You may need to run setup again from the top right menu to install BadBT. Running this on a smartwatch against your paired phone may despair your watch from phone/wearos app. Prefixes are experimental.</string>
    <string name="bt_badbt_string_fakeupdate">iexplore -k http://fakeupdate.net/win10ue</string>
    <string name="bt_badbt_string_rickroll">https://www.youtube.com/watch?v=dQw4w9WgXcQ</string>
    <string name="bt_carwhisperer">Carwhisperer script from the way back. Listen to, or inject audio to various devices like speakers, headsets, watches or even cars. Carwshisperer is not supported by internal bluetooth (VHCI or bt_smd) yet.</string>
    <string name="chanel">Channel</string>
    <string name="channel">Channel</string>
    <string name="deauthenticate_anyone_besides_me">Deauthenticate anyone besides me</string>
    <string name="drawertitleaudio">Audio Manager</string>
    <string name="drawertitlebadusb">Bad USB MITM Attack</string>
    <string name="drawertitlebt">Bluetooth Arsenal</string>
    <string name="drawertitlecan">CARsenal</string>
    <string name="drawertitlecreatechroot">Kali Chroot Manager</string>
    <string name="drawertitlecustomcommands">Custom Commands</string>
    <string name="drawertitledeauth">DeAuth</string>
    <string name="drawertitleduckhunter">DuckHunter HID</string>
    <string name="drawertitlegps">Wardriving</string>
    <string name="drawertitlehid">HID Attacks</string>
    <string name="drawertitlekaliservices">Kali Services</string>
    <string name="drawertitlekernel">Kernel</string>
    <string name="drawertitlemacchanger">MAC Changer</string>
    <string name="drawertitlemodules">Modules</string>
    <string name="drawertitlempc">Metasploit Payload Generator</string>
    <string name="drawertitlenethunter">Home</string>
    <string name="drawertitlenmap">Nmap Scan</string>
    <string name="drawertitlepineapple">Pineapple Connector</string>
    <string name="drawertitlesearchsploit">SearchSploit</string>
    <string name="drawertitleset">SET</string>
    <string name="drawertitlesettings">Settings</string>
    <string name="drawertitleusbarsenal">USB Arsenal</string>
    <string name="drawertitlevncmanager">KeX Manager</string>
    <string name="drawertitlewifipumpkin">Wifipumpkin</string>
    <string name="drawertitlewps">WPS Attacks</string>
    <string name="hid_powersploit_description">The Powersploit payload provides you a choice of reverse meterpreter HTTP/S payloads. URL to payload should be a URL accessible to the victim machine where the larger payload is downloaded to.</string>
    <string name="hid_windows_cmd_description">This Windows CMD payload allows you to enter raw commands to a Windows command prompt. Hitting the list menu will allow you to choose keyboard layout or UAC bypass options.</string>
    <string name="hostapd_private_key">Private Key Password</string>
    <string name="iface">Interface</string>
    <string name="load">Load from SDCARD</string>
    <string name="mana_hostapd_wpe">The hostapd configuration file used for 802.1x/EAP authentication attack (hostapd-wpe) This is not used with MANA.</string>
    <string name="mana_hostapd_wpe_certs">Generate certificates (1st time only)</string>
    <string name="mpc_description">MSFvenom Payload Creator (MSFPC) is a wrapper written by g0tmi1k to generate multiple types of payloads, based on users choice. The idea is to be as simple as possible (only requiring one input) to produce their payload.</string>
    <string name="mpc_generateHTTP">Generate to HTTP</string>
    <string name="mpc_generateSDCARD">Generate to SDCARD</string>
    <string name="mpc_ip_address">IP Address:</string>
    <string name="mpc_payload">Payload Options:</string>
    <string name="mpc_port">Port:</string>
    <string name="mpc_type">Type:</string>
    <string name="nmap_all">Enable OS version detect, script scan, and traceroute</string>
    <string name="nmap_dontrandomize">"Don't randomize port scan"</string>
    <string name="nmap_fastmode">Fast mode (fewer ports)</string>
    <string name="nmap_hint">scanme.nmap.org, 192.168.0.1; 10.0.0–255.1–254</string>
    <string name="nmap_hostdiscovery_ping">Ping Scan</string>
    <string name="nmap_ipv6">Enable IPv6</string>
    <string name="nmap_osdetectenable">Enable OS detection</string>
    <string name="nmap_ports">Ports</string>
    <string name="nmap_scan_technique">Scan Techniques</string>
    <string name="nmap_servicedetect">Service/Version Detection</string>
    <string name="nmap_timing_template">Timing Template</string>
    <string name="nmap_topports">Top 20 Ports</string>
    <string name="nmap_udpscan">UDP Scan</string>
    <string name="payload">Payload</string>
    <string name="payload_select">Please select</string>
    <string name="pineapple_cidr">Pineapple CIDR</string>
    <string name="pineapple_clientip">172.16.42.42/24</string>
    <string name="pineapple_description">The pineapple connector is used in conjunction with the Hak5 Pineapple Nano and a USB OTG cable. This helper will connect the Pineapple Nano over ethernet and upstream your wifi connection.</string>
    <string name="pineapple_gateway">Pineapple Gateway/Web Interface IP</string>
    <string name="pineapple_gatewayip">172.16.42.1</string>
    <string name="pineapple_ip">Client IP</string>
    <string name="pineapple_noupstream">No upstream</string>
    <string name="pineapple_port">Pineapple Nano Web Port</string>
    <string name="pineapple_start_OTG">Setup Connection</string>
    <string name="pineapple_stop_OTG">Close Connection</string>
    <string name="pineapple_subnet">172.16.42.0/24</string>
    <string name="pineapple_transproxy">Forward port 80/443 to 8080/8083</string>
    <string name="pineapple_webport">1471</string>
    <string name="ps_ip_address">IP Address (LHOST)</string>
    <string name="ps_payload_url">URL to payload</string>
    <string name="ps_port">Port (LPORT)</string>
    <string name="save">Save to SDCARD</string>
    <string name="scanButtonText">Scan</string>
    <string name="scan_networks">Scan Networks</string>
    <string name="source">Edit source</string>
    <string name="ssid">SSID</string>
    <string name="start_deauthentication">Start Deauthentication :)</string>
    <string name="update">Update</string>
    <string name="whitelist">Whitelist</string>
</resources>