<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <EditText android:id="@id/nmap_searchbar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="false" android:hint="@string/nmap_hint" android:layout_alignParentTop="true" android:measureWithLargestChild="false" android:iconifiedByDefault="false" android:layout_toEndOf="@id/nmap_scan_button" />
        <Button android:id="@id/nmap_scan_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/base_listItem_LR" android:text="@string/scanButtonText" android:layout_centerVertical="true" android:layout_alignParentStart="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:textAlignment="center">
        <androidx.appcompat.widget.SwitchCompat android:id="@id/nmap_adv_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/advancedOptionsSwitchText" android:textAlignment="center" />
    </LinearLayout>
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:id="@id/nmap_adv_layout" android:padding="5.0dip" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="15.0dip" android:weightSum="1.0" android:paddingStart="10.0dip" android:paddingEnd="10.0dip">
            <Spinner android:layout_gravity="start" android:id="@id/nmap_int_spinner" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <CheckBox android:id="@id/nmap_all_check" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nmap_all" />
            <CheckBox android:id="@id/nmap_ping_check" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nmap_hostdiscovery_ping" />
            <CheckBox android:id="@id/nmap_SV_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nmap_servicedetect" />
            <CheckBox android:id="@id/nmap_osonly_check" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" android:text="@string/nmap_osdetectenable" />
            <CheckBox android:id="@id/nmap_ipv6_check" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nmap_ipv6" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nmap_ports" />
            <EditText android:id="@id/nmap_ports" android:layout_width="229.0dip" android:layout_height="wrap_content" android:ems="10" android:digits="0123456789-,:" android:inputType="number" />
            <CheckBox android:id="@id/nmap_top_ports_check" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nmap_topports" />
            <CheckBox android:id="@id/nmap_fastmode_check" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nmap_fastmode" />
            <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nmap_dontrandomize" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nmap_timing_template" />
            <Spinner android:id="@id/nmap_timing_spinner" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nmap_scan_technique" />
            <Spinner android:id="@id/nmap_scan_tech_spinner" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <CheckBox android:id="@id/nmap_udp_checkbox" android:layout_width="109.0dip" android:layout_height="48.0dip" android:text="@string/nmap_udpscan" />
            <androidx.legacy.widget.Space android:layout_width="1.0dip" android:layout_height="30.0dip" />
        </LinearLayout>
    </ScrollView>
    <ExpandableListView android:layout_gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" />
</LinearLayout>
