<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView android:gravity="center" android:layout_gravity="center" android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/hid_windows_cmd_description" />
        <TextView android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/source" />
        <EditText android:gravity="top" android:id="@id/windowsCmdSource" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="1.0dip" android:layout_marginRight="1.0dip" android:ems="10" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <Button android:id="@id/windowsCmdLoad" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/load" />
            <Button android:id="@id/windowsCmdSave" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save" />
            <Button android:id="@id/windowsCmdUpdate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
